# workout_api

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
kernel/: __init__.py  main.py  routers.py
kernel/atleta/: controller.py  models.py  schemas.py
kernel/categorias/: controller.py  models.py  schemas.py
kernel/centro_treinamento/: controller.py  models.py  schemas.py
kernel/configs/: database.py  settings.py
kernel/contrib/: dependencies.py  models.py
kernel/users/: controller.py  schemas.py
migrations/: env.py
migrations/versions/: 84a78687dfa8_create_table_atleta.py
test/: test_app.py
